--- a/Sarkar-and-Tang-simulation-replication.Rmd
+++ b/Sarkar-and-Tang-simulation-replication.Rmd
@@ -48,7 +48,7 @@ canonical_svd = function(X) {
 ```{r}
 #' Compute the SVD of X and construct an orthogonal matrix U_perp such that U_perp * U = 0.
 #'  
-decompose <- function(X, randomize) {
+decompose <- function(X, randomize=FALSE) {
   n = nrow(X); p = ncol(X)
   stopifnot(n >= 2*p)
   
@@ -64,13 +64,32 @@ decompose <- function(X, randomize) {
 }
 ```
 
-```{r}
-3+3
-```
 
 ```{r}
-5+5
+create_equicorrelated_D <- function(X, randomize=FALSE) {
+  # Compute SVD and U_perp.
+  X.svd = decompose(X, randomize)
+  
+  # Set s = min(2 * smallest eigenvalue of X'X, 1), so that all the correlations
+  # have the same value 1-s.
+  if (any(X.svd$d <= 1e-5 * max(X.svd$d)))
+    stop(paste('Data matrix is rank deficient.',
+               'Equicorrelated knockoffs will have no power.'))
+  lambda_min = min(X.svd$d)^2
+  s = min(2*lambda_min, 1)
+  return(s)
+}
+
+create_equicorrelated_knockoffs <- function(X, randomize=FALSE){
+  # Construct the knockoff according to Equation 1.4.
+  s <- create_equicorrelated_D(X)
+  s_diff = pmax(0, 2*s - (s/X.svd$d)^2) # can be negative due to numerical error
+  X_ko = (X.svd$u %*diag% (X.svd$d - s / X.svd$d) +
+          X.svd$u_perp %*diag% sqrt(s_diff)) %*% t(X.svd$v)
+  return(X_ko)
+}
 ```
+
 
 
 
